# task_calldash

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: index.css  main.tsx
client/src/app/: App.tsx  providers.tsx
client/src/features/document-upload/hooks/: useDocuments.ts
client/src/features/document-upload/ui/: DocumentUploader.tsx
client/src/features/prompt-editor/hooks/: usePrompt.ts
client/src/features/prompt-editor/ui/: PromptEditor.tsx
client/src/features/transcript/store/: transcriptStore.ts
client/src/features/transcript/ui/: RAGSourcesPanel.tsx  TranscriptViewer.tsx
client/src/features/voice-call/hooks/: useVoiceCall.ts
client/src/shared/api/: httpClient.ts
docker/: client.Dockerfile  nginx.conf  rag-server.Dockerfile  server.Dockerfile  voice-agent.Dockerfile
rag-server/: pyproject.toml
rag-server/src/: config.py  main.py
rag-server/src/adapters/: document_parser.py  openai_embeddings.py  qdrant_store.py  redis_store.py
rag-server/src/api/: health.py  ingest.py  retrieve.py
rag-server/src/core/: chunker.py  retriever.py
rag-server/src/models/: document.py
server/: package.json  pnpm-lock.yaml  tsconfig.json
server/src/: config.ts  server.ts
server/src/routes/: config.routes.ts  documents.routes.ts  voice.routes.ts
server/src/services/: config.service.ts  document.service.ts  livekit.service.ts
voice-agent/: pyproject.toml
voice-agent/src/: agent.py  config.py
voice-agent/src/rag/: prompt_builder.py  retriever.py
(+2 files in other folders)
